@@ -493,11 +493,13 @@ hasExtBitOp (int op, sym_link *left, int right)
     case GETABIT:
       return true;
     case ROT:
-      unsigned int lbits = bitsForType (left);
-      if (getSize (left) <= 2 && (right % lbits  == 1 || right % lbits == lbits - 1))
-        return true;
-      if (getSize (left) <= 2 && lbits == right * 2)
-        return true;
+      {
+        unsigned int lbits = bitsForType (left);
+        if (getSize (left) <= 2 && (right % lbits  == 1 || right % lbits == lbits - 1))
+          return true;
+        if (getSize (left) <= 2 && lbits == right * 2)
+          return true;
+      }
       return false;
     }
   return false;
